# n-body-simulation

./: LICENSE  README.md  config.yml  pyproject.toml
src/functions/: __init__.py  acceleration.py  energy.py  integrator.py  plot.py  utils.py
src/nbody/: __init__.py  nbody.py
